static/css/sw-core.css
/* george lychock MS3 stylesheet */
/* NOTES:
    - Except for base html elements, common colors, and Bootstrap styles, all other custom selectors names begin with "us" to make it easier to see in the markup */


/* ######## CSS TOC - In Order of Appearance: */
/* @imports */
/* Bootstrap Overides */
/* Base Elements */
/* Common Text Colors */
/* Common Background Colors*/
/* Banners */
/* Header */
/* Home - Highest Rated */
/* Home - Recipe Panel */
/* Revenue Side 1 */
/* Footer Section */
/* @media styles */

/* Common Button Colors*/
/* Spacers */
/* Font Styles */
/* Common Positioning */
/* Common Other*/
/* Buttons */
/* Nav */
/* Mobile Library Dropdown */
/* Project Form */
/* Dashboard */
/* Dashboard Panels */
/* Active Projects Dashboard /*
/* Active Widgets Dashboard */
/* Progress Bar */
/* Widget Library */

/* Social Links */
/* @media */
/* Color Schemes */




/* Imports */
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600&display=swap');

/* Bootstrap Overides */
button:focus {
    outline: none;
}

.btn-outline-success {
  margin: 5px;
}

.btn-outline-secondary {
  border-color: beige;
}

.navbar-toggler {
  font-size: .8rem;
}

.nav-link i {
  font-size: 1rem;
}

.form-check label {
  float: left;
}

.bg-light {
  --bs-bg-opacity: .6;
  background-color: rgba(var(--bs-light-rgb),var(--bs-bg-opacity))!important;
}

.bg-dark {
  background-color: rgba(128, 0, 0, .45)!important;
}

.form-label {
  color: #6c757d;
}

/* Reused CSS */
/* from Code Institute Django Module */
/* from Bulma */
.icon {
    align-items: center;
    display: inline-flex;
    justify-content: center;
    height: 1.5rem;
    width: 1.5rem;
}

.btn-black {
  background: black;
  color: white;
}

.btn-outline-black {
  background: white;
  color: black !important; /* use important to override link colors for <a> elements */
  border: 1px solid black;
}

.btn-outline-black:hover,
.btn-outline-black:active,
.btn-outline-black:focus {
  background: black;
  color: white !important;
}

.overlay {
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    position: fixed;
    background: rgba(255, 255, 255, 1);
    z-index: -1;
}

.sw-overlay-varietals {
  background: rgba(255, 255, 255, .95);
}

.sw-btt-button {
  background-color: #333;
  height: 42px;
  width: 42px;
  position: fixed;
  bottom: 10px;
  right: 500px;
}

.sw-btt-link {
  cursor: pointer;
}

.update-link,
.remove-link {
  cursor: pointer;
}

/* Allauth form formatting */
/* from Code Institute Django Module */

.allauth-form-inner-content p {
  margin-top: 1.5rem; /* mt-4 */
  color: #6c757d; /* text-secondary */
}

.allauth-form-inner-content input {
  border-color: #000;
  border-radius: 0;
}

.allauth-form-inner-content label:not([for='id_remember']) {
  display: none;
}

.allauth-form-inner-content input::placeholder {
  color: #aab7c4;
}

.allauth-form-inner-content button,
.allauth-form-inner-content input[type='submit'] {
/* btn */
display: inline-block;
  font-weight: 400;
  color: #fff;
  text-align: center;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #000;
  border: 1px solid #000;
  padding: .375rem .75rem;
  font-size: 1rem;
  line-height: 1.5;
  border-radius: 0;

  /* standard bootstrap btn transitions */
  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}

.allauth-form-inner-content button:hover,
.allauth-form-inner-content input[type='submit']:hover {	
color: #fff;
  background-color: #222;
  border-color: #222;
}

.allauth-form-inner-content a {
color: #17a2b8; /* text-info */
}

/* Base Elements */
html {
    height: 100%;
}

body {
    background: url('/media/home-page-image-spiltwine.jpg') no-repeat right center fixed;
    background-size: cover;
    background-color: #fff;
    height: calc(100vh - 164px);
    font-family: 'Noto Sans', sans-serif;
}

h1, h2, h3, h4, h5, h6 {
    margin: 0;
    font-family: 'Montserrat', 'FreeSans', sans-serif;
}

a {
  color: #333;
}

p {
  margin-left: 10px;
}

/* Common Text Colors */
.sw-p-color-blk {color: black;}
.sw-p-color-01 {color: gray;}
.sw-p-color-02 {color: whitesmoke;}
.sw-p-color-03 {color: #f80;}
.sw-i-color-01 {color: #9c3;}
.sw-i-color-02 {color: #9c3;}
.sw-i-color-03 {color: #8b0000;}
.sw-i-color-04 {color: #004d99;}
.sw-h-color-01 {color: #9c3;}
.sw-h-color-02 {color: whitesmoke;}
.sw-h-color-03 {color: rgba(0, 76, 153, .75);}
.sw-h-color-04 {color: lightblue;}
.sw-btn-color-01 {color: rgba(147, 212, 157, .25);}

/* Common Background Colors*/
.sw-b-color-none {background-color: transparent;}
.sw-b-color-01 {background-color: rgba(213, 121, 102, .75);}
.sw-b-color-02 {background-color: rgba(128, 0, 0, 1.0);}
.sw-b-color-02a {background-color: rgba(128, 0, 0, .85);}
.sw-b-color-02b {background-color: rgba(128, 0, 0, .65);}
.sw-b-color-03 {background-color: #8b0000;}
.sw-b-color-04 {background-color: whitesmoke;}
.sw-b-color-04a {background-image: radial-gradient(rgba(255, 255, 255, .25), rgba(255, 255, 255, 1));}
.sw-b-color-05 {background-color: rgba(255, 255, 255, 1);}
.sw-b-color-05a {background-color: rgba(255, 255, 255, .65);}
.sw-b-color-05b {background-image: radial-gradient(rgba(255, 255, 255, 1), rgba(255, 255, 255, .25));}

/* Font Sizing */
.sw-font-size-50 {
  font-size: .5rem;
}

.sw-font-size-85 {
  font-size: .85rem;
}

.sw-font-size-150 {
  font-size: 1.5rem;
}

/* Common Positioning */
.sw-text-center {
    text-align: center;
}

.sw-text-left {
  text-align: left;
}

.sw-padding-0 {
  padding: 0;
}

/* Icons */
.sw-user-menu-icon {
  font-size: 1.5rem;
}

/* Links and Buttons */
.sw-link-text-01 {
  text-decoration: none;
  font-size: .8rem;
}

/* Spacers */
.sw-spacer-100p {
  width: 100%;
}

.sw-spacer-20px {
  height: 20px;
}

/* Sizing */
.sw-img-100p {
  width: 100%;
}

/* Header */
.sw-header-logo {
  padding-left: 25px;
}

.sw-logo-font {
  font-family: 'Noto Sans', sans-serif;
  font-size: 1.5rem;
}

.sw-user-menu {
  padding: 0 0 0 0;
}

/* Mobile User Apps Menu */
.sw-apps-menu-mobile {
  font-size: .5rem;
}

/* Desktop Main Nav */
.sw-dt-main-nav {
  padding-left: 90px;
}

/* Deliver Banner */
.sw-db-container {
  margin-top: 115px;
}

.sw-delivery-banner {
  text-align: center;
  padding: 3px 0;
  min-height: 25px;
}

/* Desktop Side Bar */
.sw-dt-sidebars {
  min-height: 600px;
  max-height: fit-content;
  border: solid 1px whitesmoke;
  border-radius: 5px;
}

/* Forms */
.sw-form-input {
  min-width: 20rem !important;
}

.sw-search-input {
  width: 100%;
}

/* Content Areas */

.sw-content-container {
  padding-top: 5px;
}

/* Index */
.sw-index-h4 {
  text-align: right;
}

.sw-btn-index-h4 {
  font-size: .75rem;
}

/* Products */
.sw-product-title {
  border-bottom: #8b0000 1px solid;
}
.sw-product-img {
  width: 200px;
}

.sw-card-col {
  border-bottom: #333;
}

.sw-card-header {
  font-size: .8rem;
}

.sw-card-img {
  max-height: 220px;
  width: auto;
}

.sw-card-body {
  height: 300px;
}

.sw-card-name {
  height: 30px;
}

.sw-card-footer {
  padding: .25rem .5rem;
}

.sw-wine-info {
  font-size: .8rem;
}

/* Varietals */
.sw-varietal-des {
  font-size: .8rem;
}

/* @media */

/* from Code Institute Django Module */
/* Slightly larger container on xl screens */
  @media (min-width: 768px) {
    .nav-link i {
      font-size: 1.5rem;
      margin: 0 5px;
    }

    .sw-user-menu-icon {
      font-size: 2rem;
    }

  }
  
  /* fixed top navbar only on medium and up */
  @media (min-width: 992px) {
    body {
      background: url('/media/home-page-image-spiltwine.jpg') no-repeat center center fixed;
      background-size: cover;
      background-color: #fff;
      height: calc(100vh - 164px);
      font-family: 'Noto Sans', sans-serif;
      }

    .sw-b-color-05 {background-color: rgba(255, 255, 255, .05);}
    .sw-b-color-05b {background-image: none;}

    .sw-logo-font {
      font-size: 2.5rem;
    }

    .sw-db-container {
      margin-top: 135px;
    }

    /* .fixed-top-desktop-only {
        position: fixed;
        top: 0;
        right: 0;
        left: 0;
        z-index: 1030;
    } */

    /* Index */
    .sw-index-h4 {
      text-align: left;
    }
    
    .sw-btn-index-h4 {
      font-size: 1rem;
    }
  }

  /* @media (min-width: 1200px) {
    .container {
      max-width: 80%;
    }
  } */

